[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
env_logger = "*"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
test-log = "0.2.11"

[dependencies]
anyhow = "1.0.69"
tracing = "0.1.37"
hex = "0.4.3"
tracing-subscriber = "0.3.16"